# Idol-Matchmaker

./: .gitignore  README.md
.cursor/plans/: 推しネーター開発フェーズ_b4c3ba55.plan.md
.cursor/rules/: fastapi-backend.mdc  project-core.mdc  typescript-frontend.mdc
.cursor/skills/diagnosis-algorithm/: SKILL.md
.cursor/skills/fastapi-endpoint/: SKILL.md
backend/: main.py  pyproject.toml
frontend/src/app/: page.tsx
